# notification-operator

./: Dockerfile  deployment_failure_handler.py  event_notification_handler.py  failing-job.yaml  node_scheduling_test_handler.py  pod_phase_notification_handler.py  pyproject.toml
.github/workflows/: build_and_release.yaml
