[tool.poetry]
name = "notification-operator"
version = "0.1.0"
description = ""
authors = ["MJedr <jedrych.marcysia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kopf = "^1.35.3"
kubernetes = "^21.7.0"
zulip = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
